1. compatible with Android7.1（Tested on OS：3.50.58）    and Android8.1 2. Separate set power and set color
3. update Readme port assignment for all platform

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.elotouch.statuslightdemo_i4"
-        minSdkVersion 29
+        applicationId "com.elotouch.statuslightdemo_E466847"
+        minSdkVersion 25
         targetSdkVersion 30
         versionCode 4
         versionName "1.4"
